--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
 pandas==1.5.3
 yfinance==0.2.20
-requests==2.28.1
 numpy==1.23.5
 scikit-learn==1.2.1
-plotly==5.9.0
 beautifulsoup4==4.11.1
 matplotlib==3.7.0
-tqdm==4.64.1
-nltk==3.7
 scrapy==2.8.0
 w3lib==1.21.0
 sqlalchemy==1.4.39
@@ -18,4 +14,24 @@ altair==4.2.0
 captum==0.6.0
 torch==1.12.0
 scikit-learn==0.24.2
-note
+prophet==1.1.4
+plotly==5.15.0
+tslearn==0.6.1
+tqdm==4.64.1
+dtaidistance==2.3.10
+importlib_metadata==6.8.0
+importlib_resources=6.0.0
+w3lib==2.1.1
+nltk==3.8.1
+bertopic==0.15.0
+joblib==1.3.0
+mlflow==2.4.2
+scipy==1.11.1
+pyemd==0.5.1
+yellowbrick==1.5
+lightgbm==4.0.0
+shap==0.42.0
+xgboost=1.7.4
+requests=2.31.0
+textblob=0.15.3
+vadersentiment=3.3.2
